# CSU44012

./: .gitignore  README.md
Assignment1/: Parallelism in Haskell.docx  package.yaml  ~$rallelism in Haskell.docx
Assignment1/src/: Main.hs  SeqSortingAlgs.hs
Examples/: ex1  ex1.hi
Minesweeper/: LICENSE  Minesweeper.cabal  README.md  stack.yaml
Minesweeper/.stack-work/: stack.sqlite3
Minesweeper/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Minesweeper/src/: AutoSolver.hs  Board.hs  CreateBoard.hs  Funcs.hs  Game.hs  Logic.hs  Main.hs  Play.hs  Rendering.hs
Parallelism/: LICENSE  Parallelism in Haskell.docx  package.yaml  seqSortingAlgs.hs
Parallelism/src/: ParSortingAlgs.hs  SeqSortingAlgs.hi  SeqSortingAlgs.hs
