name:                Minesweeper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/owenkduffy/Minesweeper#readme
license:             BSD3
license-file:        LICENSE
author:              Owen Duffy
maintainer:          duffyow@tcd.ie
copyright:           2019 Owen Duffy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Minesweeper
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Funcs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5,
                        array
                        ,random
                        ,split
